--- a/app/src/main/res/layout/activity_agregar.xml
+++ b/app/src/main/res/layout/activity_agregar.xml
@@ -13,7 +13,7 @@
         android:layout_marginStart="80dp"
         android:layout_marginTop="12dp"
         android:layout_marginEnd="81dp"
-        android:hint="Seleccione Producto"
+        android:hint="Seleccione Categoria"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
@@ -52,7 +52,7 @@
         android:layout_marginEnd="92dp"
         android:ems="10"
         android:hint="@string/precio"
-        android:inputType="textPersonName"
+        android:inputType="numberDecimal"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
