--- a/app/src/main/res/layout/activity_mostrar_imagen.xml
+++ b/app/src/main/res/layout/activity_mostrar_imagen.xml
@@ -81,8 +81,8 @@
 
     <ImageView
         android:id="@+id/iV_mostrarImagen"
-        android:layout_width="401dp"
-        android:layout_height="362dp"
+        android:layout_width="396dp"
+        android:layout_height="309dp"
         android:layout_marginTop="64dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -106,7 +106,7 @@
         android:id="@+id/tvMostrarMarca"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="426dp"
+        android:layout_marginTop="380dp"
         android:layout_marginEnd="200dp"
         android:text="Matarazzo"
         android:textSize="20dp"
@@ -119,7 +119,7 @@
         android:id="@+id/tvMostrarPrecio"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="480dp"
+        android:layout_marginTop="428dp"
         android:layout_marginEnd="200dp"
         android:text="150"
         android:textColor="@color/colorFirebase"
@@ -133,13 +133,12 @@
         android:id="@+id/floatBtEditPrecio"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="90dp"
-        android:layout_marginTop="480dp"
+        android:layout_marginTop="436dp"
+        android:layout_marginEnd="44dp"
         android:clickable="true"
         android:elevation="8dp"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.596"
-        app:layout_constraintStart_toEndOf="@+id/tvMostrarPrecio"
         app:layout_constraintTop_toBottomOf="@+id/toolbarMostrar"
         app:srcCompat="@drawable/ic_money" />
 
@@ -148,10 +147,11 @@
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
-        android:layout_marginTop="470dp"
+        android:layout_marginTop="428dp"
         android:ems="10"
         android:hint="precio"
         android:inputType="numberDecimal"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.526"
         app:layout_constraintStart_toStartOf="parent"
@@ -162,10 +162,11 @@
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
-        android:layout_marginTop="425dp"
+        android:layout_marginTop="372dp"
         android:ems="10"
         android:hint="Marca"
         android:inputType="textAutoCorrect|textPersonName"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.526"
         app:layout_constraintStart_toStartOf="parent"
@@ -176,10 +177,11 @@
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
-        android:layout_marginTop="370dp"
+        android:layout_marginTop="320dp"
         android:ems="10"
         android:hint="Producto"
         android:inputType="textAutoCorrect|textPersonName"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.526"
         app:layout_constraintStart_toStartOf="parent"
@@ -189,10 +191,11 @@
         android:id="@+id/floatBtEditMarca"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="424dp"
+        android:layout_marginTop="380dp"
         android:layout_marginEnd="44dp"
         android:clickable="true"
         android:elevation="8dp"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbarMostrar"
         app:srcCompat="@drawable/icon_edit" />
@@ -201,10 +204,11 @@
         android:id="@+id/floatBtEditProducto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="368dp"
+        android:layout_marginTop="324dp"
         android:layout_marginEnd="44dp"
         android:clickable="true"
         android:elevation="8dp"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbarMostrar"
         app:srcCompat="@drawable/icon_edit" />
@@ -213,13 +217,14 @@
         android:id="@+id/tvSalirEdicion"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="560dp"
-        android:text="@string/salir_editar"
-        android:textColor="#FFFFFF"
-        android:textAlignment="center"
-        android:textSize="18dp"
-        android:background="@color/colorPrimary"
+        android:layout_marginTop="514dp"
+        android:background="@color/colorFirebase"
         android:elevation="8dp"
+        android:text="@string/salir_editar"
+        android:textAlignment="center"
+        android:textColor="#FFFFFF"
+        android:textSize="18dp"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
