--- a/app/src/main/res/layout/activity_agregar.xml
+++ b/app/src/main/res/layout/activity_agregar.xml
@@ -14,6 +14,7 @@
         android:layout_marginTop="12dp"
         android:layout_marginEnd="81dp"
         android:hint="Seleccione Categoria"
+        android:inputType="textAutoCorrect|textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
@@ -26,6 +27,7 @@
         android:layout_marginTop="12dp"
         android:layout_marginEnd="81dp"
         android:hint="Seleccione Producto"
+        android:inputType="textAutoCorrect|textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvCategoria" />
@@ -38,6 +40,7 @@
         android:layout_marginTop="12dp"
         android:layout_marginEnd="81dp"
         android:hint="Seleccione Producto"
+        android:inputType="textAutoCorrect|textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvNombre" />
@@ -45,11 +48,11 @@
 
     <EditText
         android:id="@+id/etNuevoPrecio"
-        android:layout_width="165dp"
-        android:layout_height="33dp"
-        android:layout_marginStart="104dp"
-        android:layout_marginTop="28dp"
-        android:layout_marginEnd="92dp"
+        android:layout_width="159dp"
+        android:layout_height="46dp"
+        android:layout_marginStart="80dp"
+        android:layout_marginTop="36dp"
+        android:layout_marginEnd="172dp"
         android:ems="10"
         android:hint="@string/precio"
         android:inputType="numberDecimal"
@@ -75,14 +78,11 @@
         android:id="@+id/btCargar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="317dp"
-        android:layout_marginEnd="39dp"
-        android:layout_marginBottom="41dp"
+        android:layout_marginTop="500dp"
+        android:layout_marginEnd="48dp"
         android:src="@drawable/ic_agregar"
         app:fabSize="normal"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etNuevoPrecio" />
+        app:layout_constraintTop_toTopOf="@+id/imageView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
