--- a/app/src/main/res/layout/dialog_agregar_al_carrito.xml
+++ b/app/src/main/res/layout/dialog_agregar_al_carrito.xml
@@ -27,7 +27,7 @@
         android:id="@+id/btQuedarse"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="36dp"
+        android:layout_marginStart="60dp"
         android:layout_marginTop="28dp"
         android:layout_marginBottom="29dp"
         android:background="@color/colorFirebase"
@@ -42,13 +42,14 @@
     <Button
         android:id="@+id/btIr"
         android:layout_width="165dp"
-        android:layout_height="42dp"
-        android:layout_marginStart="64dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
         android:layout_marginTop="28dp"
         android:layout_marginEnd="58dp"
         android:layout_marginBottom="29dp"
         android:background="@color/colorPrimary"
         android:elevation="10dp"
+        android:singleLine="false"
         android:text="Ir de todos modos"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
