--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,6 +40,7 @@
                 app:progressMode="true"
                 app:selectedDotColor="#59605F"/>
 
+
             <EditText
                 android:id="@+id/edtSearch"
                 android:layout_width="match_parent"
@@ -48,7 +49,7 @@
                 android:background="#FFFFFF"
                 android:hint="filtrar"
                 android:scaleType="center"
-                app:layout_collapseMode="parallax" />
+                app:layout_collapseMode="pin" />
 
         </com.google.android.material.appbar.CollapsingToolbarLayout>
 
