debo crear, eliminar y editar las ofertas

--- a/app/src/main/res/layout/item_recycler_ofertas.xml
+++ b/app/src/main/res/layout/item_recycler_ofertas.xml
@@ -10,6 +10,7 @@
         android:layout_width="399dp"
         android:layout_height="241dp"
         android:src="@drawable/fideos"
+        android:scaleType="fitXY"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
