--- a/app/src/main/res/layout/activity_agregar.xml
+++ b/app/src/main/res/layout/activity_agregar.xml
@@ -51,13 +51,14 @@
         android:layout_width="159dp"
         android:layout_height="46dp"
         android:layout_marginStart="80dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="172dp"
         android:ems="10"
         android:hint="@string/precio"
         android:inputType="numberDecimal"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvMarca" />
 
@@ -78,10 +79,10 @@
         android:id="@+id/btCargar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="500dp"
-        android:layout_marginEnd="48dp"
+        android:layout_marginTop="488dp"
+        android:layout_marginEnd="64dp"
         android:src="@drawable/ic_agregar"
-        app:fabSize="normal"
+        app:fabSize="mini"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageView" />
 
