--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,15 +16,25 @@
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#6f6f6f"
+            android:background="#FFFFFF"
             app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed">
 
+            <com.airbnb.lottie.LottieAnimationView
+                android:id="@+id/animacion2"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                app:lottie_rawRes="@raw/loading"
+                app:lottie_autoPlay="true"
+                app:lottie_loop="true"
+                app:lottie_colorFilter="@color/colorPrimary"
+                android:layout_marginTop="120dp"
+                app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />
 
             <androidx.viewpager2.widget.ViewPager2
                 android:id="@+id/viewPagerOfertas"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="120dp"/>
+                android:layout_marginTop="113dp"/>
 
             <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
                 android:id="@+id/indicator"
@@ -34,26 +44,60 @@
                 android:layout_marginTop="310dp"
                 app:dotsColor="#100F0F"
                 app:dotsCornerRadius="8dp"
-                app:dotsSize="16dp"
+                app:dotsSize="10dp"
                 app:dotsSpacing="4dp"
                 app:dotsWidthFactor="2.5"
                 app:progressMode="true"
-                app:selectedDotColor="#59605F"/>
+                app:selectedDotColor="#FFFFFF"/>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:layout_marginTop="328dp"
+                android:background="@color/design_default_color_secondary_variant"/>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:layout_marginTop="110dp"
+                android:background="@color/design_default_color_secondary_variant"
+                app:layout_collapseMode="pin"/>
 
 
+            <ImageView
+                android:layout_width="40dp"
+                android:layout_height="35dp"
+                android:src="@drawable/ic_search"
+                android:scaleType="center"
+                android:background="#FFFFFF"
+                android:layout_marginTop="75dp"
+                app:layout_collapseMode="pin"/>
             <EditText
                 android:id="@+id/edtSearch"
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
+                android:layout_height="35dp"
                 android:layout_marginTop="75dp"
+                android:layout_marginLeft="40dp"
                 android:background="#FFFFFF"
                 android:hint="filtrar"
                 android:scaleType="center"
-                app:layout_collapseMode="pin" />
+                app:layout_collapseMode="pin"/>
+
 
         </com.google.android.material.appbar.CollapsingToolbarLayout>
 
     </com.google.android.material.appbar.AppBarLayout>
+
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/animacion"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        app:lottie_rawRes="@raw/loading"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:lottie_colorFilter="@color/colorPrimary"
+        android:layout_marginTop="30dp"
+        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swiperefreshlayout"
@@ -79,7 +123,7 @@
         android:layout_height="wrap_content"
         android:text="Bienvenido"
         android:layout_marginLeft="40dp"
-        android:textColor="@color/colorFirebase"
+        android:textColor="@color/colorPrimary"
         android:elevation="8dp"
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"/>
     <TextView
@@ -207,5 +251,59 @@
         android:layout_marginBottom="20dp"
         android:src="@drawable/ic_agregar"
         app:fabSize="normal" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floatBtAgregarProducto"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right|bottom"
+        android:layout_marginBottom="90dp"
+        android:layout_marginRight="10dp"
+        android:clickable="true"
+        android:elevation="8dp"
+        android:src="@drawable/ic_lista"
+        android:visibility="invisible"
+        android:backgroundTint="#FFFFFF"
+        app:fabSize="mini"
+        app:pressedTranslationZ="12dp"/>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floatBtAgregarCartel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right|bottom"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="145dp"
+        android:backgroundTint="#FFFFFF"
+        android:clickable="true"
+        android:elevation="8dp"
+        android:src="@drawable/ic_cartel"
+        android:visibility="invisible"
+        app:fabSize="mini"
+        app:pressedTranslationZ="12dp" />
+
+    <TextView
+        android:id="@+id/textOfertas"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="ofertas"
+        android:textStyle="bold"
+        android:layout_gravity="right|bottom"
+        android:layout_marginRight="55dp"
+        android:layout_marginBottom="155dp"
+        android:visibility="invisible"
+        android:textColor="@color/colorAccent"/>
+
+    <TextView
+        android:id="@+id/textLista"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Productos"
+        android:textStyle="bold"
+        android:layout_gravity="right|bottom"
+        android:layout_marginRight="55dp"
+        android:layout_marginBottom="95dp"
+        android:visibility="invisible"
+        android:textColor="@color/colorAccent"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
