--- a/app/src/main/res/layout/activity_mostrar_imagen.xml
+++ b/app/src/main/res/layout/activity_mostrar_imagen.xml
@@ -25,7 +25,7 @@
                 android:id="@+id/toolbarMostrar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                android:background="?attr/colorPrimary"
+                android:background="@color/colorFirebase"
                 android:elevation="8dp"
                 app:layout_collapseMode="pin"
                 android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
@@ -35,6 +35,7 @@
 
 
                 <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/constraintToolbar"
                     android:layout_width="match_parent"
                     android:layout_height="?attr/actionBarSize">
 
@@ -45,7 +46,7 @@
                         android:layout_marginStart="4dp"
                         android:layout_marginTop="16dp"
                         android:layout_marginBottom="16dp"
-                        android:background="?attr/colorPrimary"
+                        android:background="@color/colorFirebase"
                         android:src="@drawable/icon_edit"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -58,7 +59,7 @@
                         android:layout_marginTop="16dp"
                         android:layout_marginEnd="8dp"
                         android:layout_marginBottom="16dp"
-                        android:background="?attr/colorPrimary"
+                        android:background="@color/colorFirebase"
                         android:src="@drawable/ic_delete"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -97,10 +98,9 @@
                 android:id="@+id/iV_mostrarImagen"
                 android:layout_width="match_parent"
                 android:layout_height="353dp"
-                android:layout_marginTop="55dp"
+                android:elevation="4dp"
                 android:fitsSystemWindows="false"
                 android:scaleType="centerCrop"
-                android:elevation="4dp"
                 app:layout_collapseMode="parallax"
                 app:srcCompat="@drawable/fideos" />
 
@@ -212,7 +212,9 @@
                 android:elevation="8dp"
                 android:visibility="invisible"
                 app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
-                app:srcCompat="@drawable/icon_edit" />
+                app:srcCompat="@drawable/icon_edit"
+                app:fabSize="mini"
+                app:pressedTranslationZ="12dp"/>
 
 
             <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -225,7 +227,9 @@
                 android:elevation="8dp"
                 android:visibility="invisible"
                 app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
-                app:srcCompat="@drawable/icon_edit" />
+                app:srcCompat="@drawable/icon_edit"
+                app:fabSize="mini"
+                app:pressedTranslationZ="12dp"/>
 
 
             <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -238,7 +242,9 @@
                 android:elevation="8dp"
                 android:src="@drawable/ic_money"
                 android:visibility="invisible"
-                app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />
+                app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
+                app:fabSize="mini"
+                app:pressedTranslationZ="12dp"/>
 
 
             <TextView
