--- a/app/src/main/res/layout/activity_pdf.xml
+++ b/app/src/main/res/layout/activity_pdf.xml
@@ -7,9 +7,84 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     tools:context=".actividades.Pdf">
+
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appBarLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+
+    <com.google.android.material.appbar.CollapsingToolbarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#6f6f6f"
+        app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="@android:color/background_dark"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/tvNombrePdf"
+            android:layout_width="130dp"
+            android:layout_height="wrap_content"
+            android:text="Nombre completo :"
+            android:textStyle="bold"
+            android:textColor="@color/colorPrimary"/>
+
+        <EditText
+            android:id="@+id/etNombrePdf"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:hint="ingerese su nombre"
+            android:inputType="textPersonName|textAutoComplete"
+            android:textSize="14sp" />
+
+    </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="@android:color/background_dark"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/tvDomicilioPdf"
+            android:layout_width="130dp"
+            android:layout_height="wrap_content"
+            android:text="dirección domicilio :"
+            android:textStyle="bold"
+            android:textColor="@color/colorPrimary"/>
+
+        <EditText
+            android:id="@+id/etDireccionPdf"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:hint="ingerese su nombre"
+            android:inputType="textAutoComplete"
+            android:textSize="14sp" />
+
+    </LinearLayout>
+    <TextView
+        android:id="@+id/tvEspacio"
+        android:text=".      ."
+        android:layout_width="match_parent"
+        android:layout_height="8dp"/>
+
+    </com.google.android.material.appbar.CollapsingToolbarLayout>
+    </com.google.android.material.appbar.AppBarLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
         android:orientation="horizontal">
     <TextView
         android:id="@+id/tvPro"
