--- a/app/src/main/res/layout/item_recycler_ofertas.xml
+++ b/app/src/main/res/layout/item_recycler_ofertas.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,9 +10,46 @@
         android:id="@+id/imageViewOfertas"
         android:layout_width="399dp"
         android:layout_height="241dp"
-        android:src="@drawable/fideos"
-        android:scaleType="fitXY"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:src="@drawable/shampoo"
+        android:scaleType="fitXY"/>
+
+    <TextView
+        android:layout_width="180dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="10dp"
+        android:background="@color/colorFirebase"
+        android:text="Super Oferta"
+        android:textStyle="bold"
+        android:textSize="25dp"
+        android:elevation="15dp"
+        android:textColor="#FFF"/>
+
+    <View
+        android:layout_width="140dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="130dp"
+        android:background="@color/colorPrimary"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="100dp"
+        android:layout_marginLeft="10dp"
+        android:text="$"
+        android:textStyle="bold"
+        android:textSize="70dp"
+        android:textColor="#FFC107"/>
+
+    <TextView
+        android:id="@+id/textview_precio_item_oferta"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="120dp"
+        android:layout_marginLeft="50dp"
+        android:text="150"
+        android:textStyle="bold"
+        android:textSize="40dp"
+        android:elevation="15dp"
+        android:textColor="#FAFFD607"/>
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
